contracts/test/valid/Simple.sol
pragma solidity ^0.4.17;

contract Simple {
    function A() public {

    }

    function B() public {

    }

    function C(uint256 a) {

    }

}